# FactorHub-

./: .gitignore  README.md  README_ZH.md  pyproject.toml  start_all.py  start_api.py  start_kronos_worker.py
backend/api/: __init__.py  dependencies.py  main.py
backend/core/: database.py  settings.py
backend/data/: __init__.py  enrichment.py  health.py  providers.py  registry.py  service.py
backend/models/: backtest.py  factor.py  kronos_task.py  mining_history.py  paper.py
backend/repositories/: backtest_repository.py  kronos_repository.py  mining_history_repository.py  paper_repository.py
backend/services/: analysis_service.py  auto_factor_mining_service.py  enhanced_analysis_service.py  expression_schema.py  factor_evaluation_service.py  factor_neutralization_service.py  factor_service.py  genetic_factor_mining_service.py  kronos_backtest_service.py  kronos_queue_service.py  kronos_task_service.py  llm_config_service.py  mining_history_service.py  paper_trading_service.py  quantgpt_expression_engine.py  rdagent_factor_mining_service.py  rdagent_local_pipeline.py  rdagent_native_code_executor.py  (+3 more)
data/: paper_factor_library.json
docker/: Dockerfile  README.md  docker-compose.yml
kronos_webui/: __init__.py  app.py
scripts/: deploy_sunhome.sh
tests/: test_auto_factor_mining_service.py  test_baostock_integration.py  test_genetic_factor_mining_service.py  test_kronos_routes.py  test_manual_mining_progress.py  test_mining_history_routes.py  test_paper_trading_service.py  test_rdagent_factor_mining_service.py  test_rdagent_mining_routes.py
(+54 files in other folders)
