[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-flow"
version = "0.1.0"
description = "因子分析平台 - 基于Web前端的量化因子分析系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "baostock>=0.8.9",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "TA-Lib>=0.4.28",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "xgboost>=2.0.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0.0",
    "vectorbt>=0.25.0",
    "DEAP>=1.3.0", # 遗传算法库
    "statsmodels>=0.14.0", # 统计分析
    "shap>=0.42.0", # SHAP模型解释库
    "fastapi>=0.135.1",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.41.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "rq>=1.16.2",
    "openai>=1.54.0",
    "quantstats>=0.0.81",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*", "kronos_webui*"]
